--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -7,10 +7,9 @@
     <title>MyLibrary</title>
   </head>
   <body>
-    Before
     <br />
-    <%- body %>
+    <%- include('../partials/header.ejs') %> <%-
+    include('../partials/errmsg.ejs') %> <%- body %>
     <br />
-    After
   </body>
 </html>
